--- a/ksh/asnic/advent.html
+++ b/ksh/asnic/advent.html
@@ -220,7 +220,7 @@ Vesaier
         Attack
         Harress sexcully 鬼ly
 Renliy:Cando
-    人 洛克梅根 维金美
+    人 洛克梅根 维今美
      Required| Not|Rand
     What Cannot
     无声明体不孤单 平淡无奇
