--- a/rast/rast/developer.html
+++ b/rast/rast/developer.html
@@ -1,9 +1,9 @@
 ﻿
-维金.研发同艾莱克:2000-2008 哈佛来福 大学 枪 半条命 
+维今.研发同艾莱克:2000-2008 哈佛来福 大学 枪 半条命 
 
 Half-Life:Function
   Half-Life.Gman.SelfKet.Conduct:Vertically
-  Harvard-Ralf:Lambda.LetterB:Lamb Lame Da da da Lay Fuseng:Fusion Aa //维金.研发人才:行数:367s
+  Harvard-Ralf:Lambda.LetterB:Lamb Lame Da da da Lay Fuseng:Fusion Aa //维今.研发人才:行数:367s
     Conduct.HumanMood.Transfer.Evilly
     TechnicalShudder.CentalPark.Flower //中华公园 新疆
   Counter-Strike.Maps
@@ -59,7 +59,7 @@ Half-Life:Function
   Plaza.Work.Building.CubeWindow
 Counter-Strike.Procedure
 
-维金.科技 
+维今.科技 
   沃德伟来不时梦 
     张雨生（1966年6月7日一1997年11月12日）
     蜜蜂
@@ -75,7 +75,7 @@ Counter-Strike.Procedure
    回隆 电脑爱好者
 溯源.美国
 
-维金.研发人才.损害与埋没-电工//Technical Shudder G-man
+维今.研发人才.损害与埋没-电工//Technical Shudder G-man
   美国人魂
     十瓦欣哥格 真时地慌烟 lieTrues
   联邦 软键 哼一下 //Fedual In-var-sitgation
@@ -85,13 +85,13 @@ Counter-Strike.Procedure
       饭恐惊英  南术梅 忘正正在玩//ING
 溯源.美国 
 
-维金.电影.回忆片段
+维今.电影.回忆片段
     钕汪耗
     电源.婚姻.自由与法律，密谋利益
     帝下湿 回忆.失去乐那种功能
 溯源.美国 
 
-维金.出行遇见
+维今.出行遇见
 溯源.回忆.外国人
   \\ Wjcking.Was.Wandering.Seened:
   \\   HumanKind.SeenFeeled
@@ -99,9 +99,9 @@ Counter-Strike.Procedure
   \\ Language.TenseFix
   \\   Front.Letter.End
 
-维金.北漂:2008
+维今.北漂:2008
 
-维金.社区.长凳
+维今.社区.长凳
   AutoDesk/delyix.html
   Baidu.Phone~Celly.Russian.baiyeHL
   Leonic.SignalKome.Vezaid:Bye^hell\let   
