--- a/rast/rast/health/slepting.html
+++ b/rast/rast/health/slepting.html
@@ -9,7 +9,7 @@
   kiddrawn.affect.renliy:
   group,military leader.roune
 涨潮
-  出生嵌入维金正方源素 细节
+  出生嵌入维今正方源素 细节
   钨金唇
 舌头
   @Transfranket
@@ -35,7 +35,7 @@
   忠锅：克重姬 
   中积气 意境 伊浪 磕  安拉~波比伦 特克斯坦因 新疆 肝粟 骑脸 赫南 伏羲封鼎  
   西拉 咸奘 蕊氩#鑫好.撵
-源起.东方.渴郎阖:艾菲瑞柯.维金 F1 workgroup.html line:255s
+源起.东方.渴郎阖:艾菲瑞柯.维今 F1 workgroup.html line:255s
 
 意境
   @kid~wave 莱茵 突厥 北境晓隆人 道边 画朵
