--- a/rast/rast/heuristic.html
+++ b/rast/rast/heuristic.html
@@ -50,7 +50,7 @@ Rhea CKronor
 
     起因：声明体.野蛮.文明
         野蛮：蒙昧、陋习、粗野
-        维金.模板
+        维今.模板
             老掌沟 回龙 启明 公司        
         声明体模板
             相互经验
@@ -173,7 +173,7 @@ Jesus Krystal + 7 PM 12:11 10/28
 国际招魂 10-29
     evocation
     zither
-    维金变形记 日寸 
+    维今变形记 日寸 
         self-abortion         
         dice after bornt
 10-31 will be
