--- a/rast/rast/kinect-globe/workgroup.html
+++ b/rast/rast/kinect-globe/workgroup.html
@@ -221,16 +221,16 @@ Left?!=4
             人类角度：一眨眼功夫 300年过去 微粒子罗塞塔
             颜色？解决平淡无奇(最底层？） 到奇趣 平坦 
             概念：无生命体不孤独 动态里昂/^Not Standout Style/            
-            多少标量以后 人 不存在 或不疼维金美标准
-            维金/~Declare.Wjcking~/
+            多少标量以后 人 不存在 或不疼维今美标准
+            维今/~Declare.Wjcking~/
                 颜色： 动态定义 
                 个数：莱昂起源空间算起 颜色与个数 不冲突分析
                 量 微粒子 /~Line:196s
         启元到源起 起世点  启示点 传送节点 起源 Trans-O-Back Thransfered Coloryilex
     罗列:罗塞塔:经验,端口.其他
     
-    维金时代:地球史前文明消失与复苏        
-      维金变形记
+    维今时代:地球史前文明消失与复苏        
+      维今变形记
       老掌沟奇遇记
             
       超自然生命体现象引导-定位到高等文明所在区域 // Persivision
@@ -261,13 +261,13 @@ Left Recthand-WaveAntiPillar
               竜/^neng/狗刀日本
     宿舍王墨长方形三角形几八
 
-    维金 
+    维今 
         Mars.Usedto.Serialled.Passed //Dragged Acturally
         House//马码
     回溯
 
     氏族联代 玷污组群 //Ancient Human Race Female Origin!=Leon: Fusion Under Revealate
-    宗教启示 维金美塞卡斯特/~Don't Stereotype Hidden when required, Teabag-LearnSense.Acquire?like.Rosstta
+    宗教启示 维今美塞卡斯特/~Don't Stereotype Hidden when required, Teabag-LearnSense.Acquire?like.Rosstta
     从古至今 群体事件  孤独牵连 底盘理由责任推搡  //TribeGroup.Stain?=Detain
     *?肝素省 狮子王 婬敌安 丛林脍泡 TriangleGroup.Sexhidden.Plain-Forest
 
