--- a/rast/rast/maticals/transcolor.html
+++ b/rast/rast/maticals/transcolor.html
@@ -84,7 +84,7 @@
 11-29
     形态 mfs cfs
             earththink 认(ren)知文体
-            形态.美人鱼.维金美
+            形态.美人鱼.维今美
         人	
             历史 外星人 树精类 一个？控制多个 马恋
         梅根 cfs 
