--- a/rast/rast/refabric-wyxhan.html
+++ b/rast/rast/refabric-wyxhan.html
@@ -20,7 +20,7 @@ Wyxhan.Wgyinc
      Venus; morning star; Phospherus;//被机车~挤成启明星
     Square$Fondlack
     Ultimately.BeingFirst.HeadShudder:Wyxhao //Ultmlate  
-    //宇宙 人 神  地球 维金老掌勾 出现土佛压制干自己事件或?PidUts.Adversely人类绝都引塞德 莱昂尼.科
+    //宇宙 人 神  地球 维今老掌勾 出现土佛压制干自己事件或?PidUts.Adversely人类绝都引塞德 莱昂尼.科
   *Autocyde.Odyssey.Freedom.Universa
    *WrapperEssues:Geoyless.Embrassiz
   *Kolor&Endyix
