--- a/rast/rast/scratch.html
+++ b/rast/rast/scratch.html
@@ -105,7 +105,7 @@ Creal-Analytical-ReligousBitterness-type:(un)focus
 　　斯巴塔克 修长城 阿旁宫 Nordic Romantic
 　　打猎归来 太热 阴凉休息 找凉快（whenAsnic 热）
 　　Sex 射 精 液 阴靓  处 女 膜 being compared to the feelings after ejaculation 
-　　Dotted solid ○ for 维金美 beyond Solid-Out
+　　Dotted solid ○ for 维今美 beyond Solid-Out
 　　Hymen 阴道瓣 西瓜 红色 seed  拉稀
 
 -O人鱼Movement 2020-8-8 6:15 wjcking.askwhy
