--- a/rast/rast/term/creal.html
+++ b/rast/rast/term/creal.html
@@ -118,5 +118,5 @@ Creal:reminder?.first
   Creal -⊕- 起世录（从神话走向真实的过程 复仇与获得）
   Other planet
 硬物理 动态性定义 不伤感情
-  参照 [MFS]维金美-Arrange and Beauty.docx 
+  参照 [MFS]维今美-Arrange and Beauty.docx 
 沃特波兰//Water.Boolean
