--- a/rast/rastera/arrange-beauty/mfs.html
+++ b/rast/rastera/arrange-beauty/mfs.html
@@ -1,6 +1,6 @@
 ﻿<pre>
-维金美ArrangeØBeauty
-    最终形式：维金MFS (Multiple-Feeling-Ͼexcast) > 维金美 .-ΔΟ□
+维今美ArrangeØBeauty
+    最终形式：维今MFS (Multiple-Feeling-Ͼexcast) > 维今美 .-ΔΟ□
     唯一不同的就是必须 Physical Contract is a MUST
 
     Absolute 没有性别概念Beyond language
