--- a/rast/rts^n/serenity.html
+++ b/rast/rts^n/serenity.html
@@ -1,10 +1,10 @@
-﻿维金变形记
+﻿维今变形记
   AC时空 光线(能量) 牵引性生命体	
   塞纳时空之美：感知-记忆-回忆-追忆-灵境（过去时~梦）-意境 
   颜色通用语言 Vesaid 表达
   窗外黄米饭
   壁虎.顶鱼
-    奥今萨.自行车.维金.视觉:黑夜空间翻转
+    奥今萨.自行车.维今.视觉:黑夜空间翻转
   星矢 弓箭 翅膀 性别 五岁 白杨树
   交通局粪勺焚烧
   Baimuda三角whirl?.耶稣受难日AD BC 十字军东征 沙拉哈钉　　
@@ -154,7 +154,7 @@
     召唤去香山的路上 小街桥出口 婀娜尔汗 简森联合
   灵境
   和西方 类似又有点 //AncientEast Feeling
- 维金.北漂
+ 维今.北漂
 　哈尔的移动城堡 日本
 　风车当时朝向南方 连西右上 小房子
 　符拉迪沃斯托克
