--- a/ksh/asnic/fonkarea.html
+++ b/ksh/asnic/fonkarea.html
@@ -84,9 +84,9 @@
         55</div>
     </div>
     <textarea id="textarea" cols="180" rows="50" class="preditor">
-维金 F1
+维今 F1
     地球史前文明消失和外界星球联系与复苏：
-        维金变形记
+        维今变形记
         老掌沟奇遇记
         超自然生命体现象引导解释-定位到高等文明所在区域 // Persvision
             海平面浮出消失的大陆
