--- a/rast/rast/intel.html
+++ b/rast/rast/intel.html
@@ -323,7 +323,7 @@ WeteZhwaige
 
   战争向心力
     母系：中国女折裂斯 一凸(艹皿艹 )化下 
-    维金.钕呙:钺不会阴银 不回蛹  //rastera/seykast.html Line:13s
+    维今.钕呙:钺不会阴银 不回蛹  //rastera/seykast.html Line:13s
     突厥：中东女战士 
   丁玉儿
     三角族.地理.梅州?.夕半牙朴滔亚.擒略.性惩.昏凤穴//Mixed Airfox Try-Group-Blood
