--- a/rast/pezas/wxh/kdt.html
+++ b/rast/pezas/wxh/kdt.html
@@ -59,7 +59,7 @@
   编号:2024.5.1停止 
   卡号:0009 6459
   值:1744.08
-  这些是他知道,并且是他们公司的规定
+  这些是他们公司的规定
 
   奥今萨请先完成最后一个编号:2023.11.27信誉值
   编号:2023-2024 ("它"知道年在交替中)
