--- a/rast/pezas/wxh/kdt.html
+++ b/rast/pezas/wxh/kdt.html
@@ -33,47 +33,47 @@
 	誉
 千于中
 <pre>
+<p style="color:;font-family:仿宋;font-size:18px">
 ﻿﻿吴潇涵(维今):声名并重复
-<p style="color:red">钱(费)更改并声名为:"信誉值"<p>
-信誉中(正在使用)
-信誉值(使用中 已有:账单 票据等)
+钱(费)更改并声名为:"信誉值"
+信誉中:正在使用
+信誉值:使用中 已有:账单 票据等
 
-时间更改为编号(人类:年月日)
-编号用于恩德("知道":事件编号:2018.12.22-2022.4）
-知道可用"它"或"塔"，不知道恩可(磕)中
+时间更改为编号:人类:年月日
+编号用于恩德("知道":事件编号:2018.11.22-2022.4）
+知道可用"它(塔)"，不知道的恩可(磕)中
+<p>
 <pre>
 <pre style="font-family:仿宋;font-size:18px">
-钱(费)更改并声名为:"信誉值"
 信誉中:须要办理停止
-电话
-  停止电话账号:15631876595
-  可与奥今萨共用一个
-  先用微信
-  维今一般需求用品验证(京东)极少用于通话
-  值:记录在信息中
-有线电视 //歌华
-  取消 停止 禁用
 取暖
   京能热力公司 涿州市 
   编号:2023.11.27
   编号:2024.5.1停止 
   卡号:0009 6459
   值:1744.08
-  这些是他们公司的规定
+  这些是他们公司的规定,请重新咨询一次
 
-  奥今萨请先完成最后一个编号:2023.11.27信誉值
-  编号:2023-2024 ("它"知道年在交替中)
+  奥今萨请先完成最后一个编号:2023-2024信誉值
+  编号:2023-2024 ("它"知道"年"在交替中)
+有线电视 //歌华
+  取消 停止 禁用
+电话
+  停止电话账号:15631876595
+  可与奥今萨共用一个
+  维今一般需求用品验证(京东)极少用于通话
+  先用微信:维今咨讯
+  值:记录在手机信息
 
 继续使用的信誉中
-电 网 气 水 !物业
+  电 网 气 水 !物业
 
 中值信
-编号:2023-2024区间 电话 有线电视 取暖全部停止
-完成编号2023-2024(年!)交接
-吴金春到吴潇涵交接
-编号信誉全部记录中,全部完成信誉值可转到奥今萨中
+  完成编号:2023-2024区间 取暖 有线电视 电话全部停止
+  编号信誉全部记录中,完成后可转信誉值到奥今萨中
 </pre>
-奥今萨予以名切 编号:2021开始: 信誉中 三倍冲
+奥今萨予以名切 编号:2021 开始: 信誉中 三倍冲
 你知道，我(吾)知道 天(上)知道(2018.12.22-2022.4)
+
 
 
