--- a/rast/rast/kinect-globe/global-event.html
+++ b/rast/rast/kinect-globe/global-event.html
@@ -1,7 +1,7 @@
-szn_r^l:2023713
+krx.szn_r^l:2023713
 zzh.gzh_yj
   chf^s.fsh_la 
-  wes^th.kne^k.lbt^oq.dzh
+  dzh.wes^th.kne^k.lbt^oq
 hbe.hs
 
 云南 象群北迁 无人机
