--- a/rast/rast/kinect-globe/workgroup.html
+++ b/rast/rast/kinect-globe/workgroup.html
@@ -33,9 +33,9 @@
         国民&八路.罗列党地
         维赛德 Facial
     伊兰特: HUOCHE亚过墙 鑫耗撵 商亥
-    关键.不吃饭 哈拉哨 值肪 FAighT 沙慌饿~过 (走之为 辽昭也)
+    不吃饭 哈拉哨 值肪 FAighT 沙慌饿~过 (走之为 辽昭也)
     Geo.OutSphere:瑞博尔 AT猫四肺儿
-    关键.细槽糙.捆氏兀.拱酮立蛹 WastCC FoodSleep 骨元素
+    细槽糙.捆氏兀.拱酮立蛹 WastCC FoodSleep 骨元素
     Joint.:美过 网锰 Anti-Beautiful Anti-Slow:FlyTriant
 
     梦~仙维?->铀力器?=2次:煺 踹 磴 舞力器 条燥 Flea 
@@ -49,7 +49,7 @@
         巴西方
             色 文明三 Aztec.Maya.Inka 族球旗：磁欧石倾倒   
         希腊圆                
-            关键字：自由度 变脏 人迁移 水/correget/ 胆印度脏朝圣 flow dirt w~hateR~level
+            自由度 变脏 人迁移 水/correget/ 胆印度脏朝圣 flow dirt w~hateR~level
             有了水可以维系生命 水脏了生命危险
             水池 自由个体  电影：异教徒 Neigayed wicker green bug  
                 兀欧打硼 /~Pilaeodub,K^onLumniz RectStandub Hedged
@@ -70,7 +70,7 @@ Left5: 1/8
       惩酒甘荡作能力曲吸:
         *战争.生命体.看不见生命体.维赛德
         愚蠢 搅混水    
-      发明出来的物理性东西与手稿//没有计算机 关键词：被.迫 气铅        
+      发明出来的物理性东西与手稿//没有计算机：被.迫 气铅        
         偷窃 利用 埋没
         秘密端口：打入冷宫
           凶臼(肾支.土燃)脑公心//liquor
@@ -125,7 +125,7 @@ Left?!=4
                 盅锅自：四兀 无主 兀术 线纸 星角 形别 水 
                 西欧字符：
 
-     追溯.分析.关键词：限制创造性 //Lonic.Traceback.Standout
+     追溯.限制创造性 //Lonic.Traceback.Standout
 
 @Left 2-O-5?!= 30 Date:1/10 ?HandMovement-Terminating
     软硬见尸：水性电砖贡辆靓
@@ -154,9 +154,9 @@ Left?!=4
             食指:哈迪斯
     追溯.理序
 
-    关键.小笋星.通信点-球
+    小笋星.通信点-球
 
-    起始.分析.关键词.音乐 科鲁兹 Kross   
+    起始.分析.音乐 科鲁兹 Kross   
         
         Defintion:Prodigy@Porridge:Beat^hoven // Farm^lucy~lily-Roma /~ 罗马古代酒神 /
 
@@ -199,7 +199,7 @@ Left?!=4
 								表面上是贴在地表 重力 需求力 太阳光 
 						极端 解决与利用：
 										岩浆 绝对0度 
-										穿越 铁 水泥 人类使用工具 电子 关键词.立即复原一模一样 不打忘
+										穿越 铁 水泥 人类使用工具 电子 立即复原一模一样 不打忘
 		软 硬 
 分步氏容合 
 
@@ -286,7 +286,7 @@ Left Recthand-WaveAntiPillar
         分离
     回溯.回逆.转置
 
-    关键.消损型.点球-骨-此欧式.渴了喝
+    消损型.点球-骨-此欧式.渴了喝
     克中妓：
         巴西方 耶稣山 气铅  富对面穷 地理 南半球 三角酷 挤雨//nv
         鱼渴 疾病 黑死 铀胎忍 牢鼠 洒蛮
