--- a/wzn/vsd/Argus.html
+++ b/wzn/vsd/Argus.html
@@ -1,5 +1,4 @@
-﻿
-//CrealR:[源起]生命性别吸引与表达 behaviors.docx 牵引 表达 吸力Sex Gender
+﻿//CrealR:[源起]生命性别吸引与表达 behaviors.docx 牵引 表达 吸力Sex Gender
 Vecaid
   回退Table TabLet // 形容词最后一个字母在写一遍的
     Muderer wrapper career
