--- a/past/geographic.htm
+++ b/past/geographic.htm
@@ -27,3 +27,37 @@ Uran.AdisHoles
   族肉恋 巴西 妓中克
     //ProperGrand
     //Propaganda
+		
+帕斯卡夫 
+凯奥斯:形容宇对比
+斯克莱特.对比和比较.因特利尔
+
+斯克莱特.沃兹基宇无敌:佚名宇无名氏
+  提及:王锐齐:王单宇泄密
+    艾昂之前 尼克宇莱昂
+    维赛得.沃自给.?铀宇否
+    地球.人类.历史.推测:出处:维纳斯式子军.推敲.东峥.中华.华夏.夏蒙.做梦.时间.现在.中国.涿州
+    瑞博尔.怀依.瑞亚.亚洲.背开.地母神.天上曲.泥刻^屈圆.中国.锅碗瓢盆.曾经投射.钨丝~武松.皖东.东方.华夏.中国
+    瑞博尔.索谓地.备破开
+      沃自给.轶闻.锁谓得.看见:
+      阳光 水分子 
+      英文美丽.音译中文.太腻一点(Tinylittle)谓所的.开惢泊尔.拽汝.中国
+    天上看.地理.中国.形态
+      人类想法.大多数.认为是.公鸡
+      分析后.其实是.字汞.为什么:
+        地母神.神话.希腊.美.塞克斯.动作.天马行空.球狗妈代.地形变化:维思辰:想互维思 //sequalet.html
+    //Ryber.html 
+    //PidUts.Adversely人类绝都引塞德 莱昂尼.科
+    破开点宇注意点
+
+    沃兹基
+      出生候锝今维.依旧巴斯:维今变形记.起源.被迫地
+    拉丁语
+      
+      太阳黄色光:水 微粒子 硬
+      不知道什么是疼  晶可 //KOLor
+
+      \\Alt~LAN-Dis:Scurvy Survey Cyplus+
+    十字军
+吴潇涵:历史.姓氏.喜爱.字典.起名
+洛克梅根:因特利尔.帕斯卡夫.顺序.引出
