--- a/wzn/gls/gap_h.html
+++ b/wzn/gls/gap_h.html
@@ -44,9 +44,25 @@ Gap type
 
 Holes 物理分类
 重力（types)吸引 OBB 
-　　也会招来其他能量影响 后果可能?. 
-　　Remember Anti- [邪鞋斜谢泄写血]2d-3d.O 物体倾斜 人物 不雅表情 做爱
+也会招来其他能量影响 后果可能?. 
+Remember Anti- [邪鞋斜谢泄写血]2d-3d.O 物体倾斜 人物 不雅表情
+虫洞黑洞
 
-　　虫洞
-　　黑洞
-　　
+赛克斯缘起
+  //Geopernice:Historical.Jeopardize
+  //Kazidor.Html
+  小 中 青 老
+  想与不 
+    什么:进行时刻
+    克鲁兹
+      进行时刻
+      历史
+  我.对:和:与.你 
+    //今维出生 从附属体到爱昂尼克
+    我.美:优先:与对和
+    你:我
+      时间.进行时刻
+        //Current-History
+        //Analyticals
+      沃特.萨尼克
+起源于交环
