--- a/wzn/vsd/rossita.html
+++ b/wzn/vsd/rossita.html
@@ -28,17 +28,17 @@
 
 索引-牵连 \\RenliyIndex-LeonIndex-RockmegaIndex   
 关键词：*人类.忽略 相关 关联
-    1 人们只知道毛泽东北京”光明“ 却不知道 背后那些相关的人 以及反对的人 一旦涉及到
-    2 相关：事件 时间 地点 人物 
-    3 名声以外
-    4 解释  
-        H：人 
-        L：人看不见的空间生命体
-        P:附体提到哪些人
-    Index.Triangle://毛泽东 光朝拜 人体穿入 滚动
-            H
-          /   \
-        L       P
+  1 人们只知道北京”光明“ 却不知道 背后那些相关的人 以及反对的人 一旦涉及到
+  2 相关：事件 时间 地点 人物 
+  3 名声以外
+  4 解释  
+      H：人 
+      L：人看不见的空间生命体
+      P:附体提到哪些人
+  Index.Triangle://光朝拜 人体穿入 滚动
+							H
+					/   \
+			L       P
 人头索引 地球 东 中 西
 一个人点面另外一个国家或区域人
 
