--- a/past/alyic.html
+++ b/past/alyic.html
@@ -73,7 +73,7 @@ Paskeful.Fluctuating.Water.HumanAnni.Requires.Civililet
 
 Kelah
   Enclude~Unix
-  //希腊起源人
+  //希腊人
   //  欧几里得.长方形.正方形
   //  安迪特克.偏移丢失
   //三交人
