--- a/past/health/slepting.html
+++ b/past/health/slepting.html
@@ -148,7 +148,7 @@ GeoScript.GeoGraphic.Besided
   Geo.Ketself.Underworld.Downside
 
 人类.孕育.不同与和.斯纹莱特.地一记录 //Civilize Saywlet
-   自然怀孕   男女受孕  +宗教神陨 人工智能
+  元水承兴 自然怀孕  男女受孕  +宗教神陨 人工智能
   宗教.地点.印度
     男人精液 
     女人 个数
