--- a/past/ionic.html
+++ b/past/ionic.html
@@ -155,7 +155,8 @@ Eassy.BrainVolumn.Measurement
 亚瑟王
     看见 知道 忽略 人偷胎 
     \\VirginOnce
-教父地截指:申夫的重拓
+西方山纽
+教父地截指
     \\Mirages: May Rhea.Under.BodyEarth Age
     //Eerfulate:RingBreak
     AgentProof.KoreKet.CrossDrop//第三方开据证明 
@@ -166,7 +167,7 @@ Eassy.BrainVolumn.Measurement
         \\Ace.Poccna:Wjcking.Dreamweaver
             海潮 车 离合 
     艾奏殴//斜音
-西方山纽
+申夫的重拓
 
 圣杯:起元之最
   忑栏柯思 //斯克莱特.斯纹莱特
