--- a/past/ldx/atonement.html
+++ b/past/ldx/atonement.html
@@ -2,16 +2,20 @@
 3-起源论及生命形式Redemption Atone
 第34天
     The rotation of parallel (paradise) DNA and the source 
-    The generation and contraction of white energy source,plus the interweaving with 人(男/女）、动物、地下、水中、仙家、的灵魂 
-    avenger revenger punisher 玄学metaphysics 玄幻主义 灵性感知 spiritualism 控制梦境  女狮子沙漏
+    The generation and contraction of white energy source,  interweaving with 
+		人(男/女）、动物、地下、水中、仙家、的灵魂 
+    avenger revenger punisher 玄学metaphysics 玄幻主义
+		灵性感知 spiritualism 控制梦境  女狮子沙漏
 第35天
 The era of wjcking and the five
 [第36天]
     wjcking’kingdom 时空之神 空间之神 昆仑之神 起源学者 Crystalop 
 [第37天]
-    骚母蛇(slutty female snake ,Slutty sprite needlo) yin-connection西斜邪淫毒  千年鼠蛇 平行 top 爆炸 蛇 柏拉图 霍金 时光之门 削量 孩子出生感觉
+    骚母蛇(slutty female snake ,Slutty sprite needlo) yin-connection西斜邪淫毒 
+		千年鼠蛇 平行 top 爆炸 蛇 柏拉图 霍金 时光之门 削量 孩子出生感觉
 [第38天]
-    Biological.h生物 气 地球 外太空星球 出生孩子以及基因对比 变浅，分散、跳跃、隐藏、爆发某时刻（连点、意境） 智商 灵魂之间的关系
+    Biological.h生物 气 地球 外太空星球 出生孩子以及基因对比 
+		变浅，分散、跳跃、隐藏、爆发某时刻（连点、意境） 智商 灵魂之间的关系
 第39天
 Interdisciplinarity interplanetary; interstellar;mongoose sly
 第40天
@@ -20,7 +24,9 @@ The Rests of dimension 美量 中量 次量   magnesium interim subtle （MIS）
 
 artistic conception
 第41天
-Aztec Inca Maya AIM MIA tecaya azinma  耶稣受难记：肉Tissues（耳朵）物理造的快：聚光、能、气TOP比其他物理快 Freelamen 弗良漫 Jacky.Von 平衡量向心力（centripetal force） Inrange amid outrange  星际interstellar 平行宇宙
+Aztec Inca Maya AIM MIA tecaya azinma  耶稣受难记：肉Tissues（耳朵）
+物理造的快：聚光、能、气TOP比其他物理快 Freelamen 弗良漫 Jacky.Von 
+平衡量向心力（centripetal force） Inrange amid outrange  星际interstellar 平行宇宙
 狐狸->王岐山:抓住尾巴表象和真实 话语发声以及想法想象到真实
 [2020-4-1 23：18]你们这X从freeze..?胃里dice出去健康以后，自己强行物理攻击
 第42天
@@ -50,8 +56,10 @@ Zeus宙斯打雷 脑中霹雳
 Transhuman 处子之身被剥夺后强行忘记，平衡后打开变美 和 human 的区别 
 直觉方面 
 第49天 半夜
-时  间和磁力有关系 地心 太阳 相互牵引转动 瑞亚（英语：Rhea），是古希腊神话中的第二代天后，大地女神盖亚与天空之神乌拉诺斯所生的女 
-Brain Visual System Analysis(语言方面转制True false）:文字 人种 从东日本到西欧洲 还有中部 印度 语感度以英语发音为准 外星人脑部或嘴说话 能量偏移 energy offsets
+时  间和磁力有关系 地心 太阳 相互牵引转动 瑞亚（英语：Rhea），
+是古希腊神话中的第二代天后，大地女神盖亚与天空之神乌拉诺斯所生的女 
+Brain Visual System Analysis(语言方面转制True false）
+文字 人种 从东日本到西欧洲 还有中部 印度 语感度以英语发音为准 外星人脑部或嘴说话 能量偏移 energy offsets
 2.5D 旋转
 工行卡号：65432198432210121 65432119843280210 codename：萨尼卡 萨马拉尼9613876吴潇涵14215 96114215 
 96114215  96114215
