--- a/past/ldx/ketself.html
+++ b/past/ldx/ketself.html
@@ -84,7 +84,9 @@ timeSnic+2020-9-2
         4大美女            
             民国 
                 陆小曼 林徽因 周璇 阮玲玉
-            西施、王昭君、貂蝉、杨玉环，<strong>享</strong>有 沉鱼落雁之容，闭月羞花之貌  排法 西施居首，王昭君次之，貂蝉再次，杨玉环为末。
+            西施、王昭君、貂蝉、杨玉环，<strong>享</strong>有 
+						沉鱼落雁之容，闭月羞花之貌  
+						排法 西施居首，王昭君次之，貂蝉再次，杨玉环为末。
             西施浣纱 昭君出塞 貂蝉拜月 贵妃醉酒
     国皿D中山：张作霖、冯国璋、段祺瑞
     做梦穿：未知名与姓//R奔妊?.war
@@ -174,8 +176,7 @@ Dynasty:Rect.Alfled 9/9AM7:50
           形容词.名词：群
           名词.形容词::氏
           形容词.名词
-          
-          ：  部落 酋 
+          部落 酋 
           形容词:族: 
           形容词：奴主隶:
         ?.Solid.Shape.Symbol~Shape~FlagTimesanical
