--- a/past/ldx/rast.html
+++ b/past/ldx/rast.html
@@ -1,45 +1,44 @@
-
-1 继续救赎Rast
+继续救赎Rast
 「附体到生命体进度」
-第三阶段后
-  bottom low middle high Redemption //邪毒 正
-  bottom low middle high sprite
-  bottom low middle high Distinguishing characters
-  bottom low middle high Atlantis Courier
-  bottom low middle high Angle L wolf 
-  bottom low middle high AC-MIS  mei sai yuan
-  bottom low middle high Wolf?.L.angle
-  bottom low middle high AngleWolf
-  bottom low middle high Cansai
-  bottom low middle high 起源 Source Origin
-  bottom low middle high 从danger wjcking.五大仙家   cansai  ALM 健康 以来问
-  bottom low middle high 下体到牵引 起源IF未知 复仇 牵引   东西转制 ALM 
+第三阶段后	//bottom low middle high
+  Redemption //邪毒 正
+  sprite
+  Distinguishing characters
+  Atlantis Courier
+  Angle L wolf 
+  AC-MIS  mei sai yuan
+  Wolf?.L.angle
+  AngleWolf
+  Cansai
+  起源 Source Origin
+  从danger wjcking.五大仙家   cansai  ALM 健康 以来问
+  下体到牵引 起源IF未知 复仇 牵引   东西转制 ALM 
   bottom low middle Lhigh
     shy-fe-ne-sos Atlantis’tube 
     小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
     格兰蒂亚 tele-cfs former life
-  bottom low middle high 眼 眉  健康
+  眼 眉  健康
   //jk 小闺女  Nang   
-    bottom low middle high 党 串 Rositta
-    bottom low middle high 困 frame
-    bottom low middle high 面困 frame 6 plus	
-    bottom low middle high 困分化 晚吃一次 工面1
-    bottom low middle high 困分化  工面3
-    bottom low middle high  buginsect inner-danG^er 
-    bottom low middle high work group
-    bottom low middle high head&hand off bone Sos white-partial
-    bottom low middle high DotEarth Communicate Geo.Interface(Ltsz.Pillar)
-    bottom low middle high  slept-offend slept line coreget drag lessed 
-    bottom low middle high Paest Tenze 
-    bottom low middle high Aysak Issac
+	党 串 Rositta
+	困 frame
+	面困 frame 6 plus	
+	困分化 晚吃一次 工面1
+	困分化  工面3
+	 buginsect inner-danG^er 
+	work group
+	head&hand off bone Sos white-partial
+	DotEarth Communicate Geo.Interface(Ltsz.Pillar)
+	 slept-offend slept line coreget drag lessed 
+	Paest Tenze 
+	Aysak Issac
 
-     bottom low middle high 0-9 Inner Leo Show
-    bottom low middle high sleep still expantion, partial, H
-    bottom low middle high 中楼拽杆 对接 zzi part 1- 7 
-    bottom low middle high zzi part8 11.11
-    bottom low middle high
-  陈佩斯?地精 lzg Eva
-开始Rast
+	 0-9 Inner Leo Show
+	sleep still expantion, partial, H
+	中楼拽杆 对接 zzi part 1- 7 
+	zzi part8 11.11
+
+  佩斯陈?地精 lzg Eva
+开始  //Rast
 
 
 到底谁弄的多: 骂街  启示录(比率) 米元素 Ltsz 修复  
