--- a/past/rts^n/serenity.html
+++ b/past/rts^n/serenity.html
@@ -54,7 +54,7 @@
     粉色花冠树
     阴阳 女蛇精古代西游记anti三清的一个荫（葫芦）宅
     洗衣服//奶奶
-    德克萨斯？：上面天空很蓝 
+    德克萨斯 上面天空很蓝 
     沙场
     洗手水池 公路树 石家庄
 回溯
@@ -65,7 +65,7 @@
     正大综艺.正大剧场
     双簧管
     催眠师 宇克
-    腿被抡 因为老鼠 偷车子 的那个家属院
+    腿被抡 因为老鼠 偷车子的家属院
 回溯
 
 文明：亚特兰蒂斯
@@ -111,7 +111,7 @@
 回溯.起始.日本.天马
 
 意境.德国.欧洲
-  来银河 
+  来银河  //套索河
   孩童 //Kidwave
   拱桥
   铀船怂 //20000 Leagues Under the Sea
@@ -119,12 +119,12 @@
 传送.回逆
 
 地点：启明 西柏坡 平山
-    地道桥 雨水 黄土色
-    李云龙?.逝去的解放军国民下雨地道桥的磨脚面的雨水女
-      遇见?: 华工女 
-      端口:宏观.地川洋土
-    西柏坡之行的尴尬白宽面条
-    楚溪春 涨广背
+	地道桥 雨水 黄土色
+	龙云?.逝去的解放军国民下雨地道桥的磨脚面的雨水女
+		遇见?: 华工女 
+		端口:宏观.地川洋土
+	西柏坡之行的尴尬白宽面条
+	楚溪春 涨广背
 回溯
 
 意境:迁引
@@ -203,24 +203,24 @@
 　　  70 80后 （Democratic）民工自由
 
 地点 印象
-    铀元素
-　　安吉尔 角
-　　水上魂斗罗 第三关 关头 分列 人 
-　　小女孩的鞋子
-　　Gman
-　　狼图腾 喀纳斯
-　　陈大龙 做运动 红蜘蛛片子
-　　
-　　高跟鞋 frequency High heel HH shoe 叔叔 书
-　　我的female feet
-　　灵境
-　　三角楼 在抢草图 ?.外星人可能在盗取能量
-　　买买提 韭菜片状 羊肉串 非常之好吃
-　　Foxless or foxness
-　　意境
-　　王丹意境裕康小区楼上
-　　仙颐园家里埃及￠ame 陶罐
-　　土耳其
+	铀元素
+　安吉尔 角
+　水上魂斗罗 第三关 关头 分列 人 
+　小女孩的鞋子
+　Gman
+　狼图腾 喀纳斯
+　陈大龙 做运动 红蜘蛛片子
+　
+　高跟鞋 frequency High heel HH shoe 叔叔 书
+　我的female feet
+　灵境
+　三角楼 在抢草图 ?.外星人可能在盗取能量
+　买买提 韭菜片状 羊肉串 非常之好吃
+　Foxless or foxness
+　意境
+　王丹意境裕康小区楼上
+　仙颐园家里埃及￠ame 陶罐
+　土耳其
 回溯
 
 地点.衡水 涿州￠30 60-70s docx
