--- a/wxh/past/persivision.html
+++ b/wxh/past/persivision.html
@@ -18,8 +18,8 @@
     背负和尚复仇
     地下元素?.疗伤
     暗能朱凌志 变女人 下体 细胞 剪鱼  Δ Mei aim rim yuan（lowkey）
-    8341 毛泽死
-    吴潇涵 The like 对比
+    8341 泽死毛
+   
     细节不收拾 建设性
     收拾 礼仪举止 DNA
     做梦 偷物之人 小锤子
